--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         }
     </style>
   </head>
-  <body>
+  <body style="padding: 4px;">
     <ul id="messages"></ul><br>
     <center><ul id="values"></ul></center>
     <form action="">
